wip, consulting, venture

--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 class="text-center">K1M S.y.s.t.e.m.e.s</h1>
-        <h2 class="text-center">Under Construction</h2>
+        <header><h1 class="text-center">K1M S.y.s.t.e.m.e.s</h1></header>
+        
+        <h2 class="text-center">WIP</h2>
+        <p>So I have a few mobile app ideas and I would like to say that they are work-in-progress. After some thought, instead of releasing them one by one under my name I thought it best to release them all eventually under an LLC to keep everything separate from my own personal finances and to also get the legal protections that one would not normally get under one's own personal name. This entire venture is for-profit so I hope to gain the tax benefits of an LLC as well.</p>
+        <h2 class="text-center">Consulting</h2>
+        <p>Aside from startups and writing code, my passion has always been consulting. I like meeting people and hearing about their new business ideas. If you are reading this webpage, please feel free to shoot me an email. I would enjoy speaking with you and I have no problem giving out free technical or business advice. I'm not saying that my advice would be as valuable as ten bars of gold, but it doesn't hurt to get another person's opinion.</p>
+        <h2 class="text-center">A Most Modest Venture</h2>
+        <p>So my business is very modest in nature. You may possibly think that this could be rather on the unprofessional side as I do not have a domain and I am using a gmail account and if you think so then I apologize wholeheartedly. I simply felt the need to reduce as many costs as possible, even the most minute ones.</p>
+        <footer>
+            Contact: 
+            <a href="mailto:k1m.s.y.s.t.e.m.e.s@gmail.com">k1m.s.y.s.t.e.m.e.s@gmail.com</a>
+            <br>
+            &copy 2024
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
