lighter background color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header><h1 class="text-center">K1M S.y.s.t.e.m.e.s</h1></header>
         
         <h2 class="text-center">WIP</h2>
-        <p>So I have a few mobile app ideas and I would like to say that they are work-in-progress. After some thought, instead of releasing them one by one under my name I thought it best to release them all eventually under an LLC to keep everything separate from my own personal finances and to also get the legal protections that one would not normally get under one's own personal name. This entire venture is for-profit so I hope to gain the tax benefits of an LLC as well.</p>
+        <p>So I have a few mobile app ideas and I would like to say that they are work-in-progress.</p>
         <h2 class="text-center">Consulting</h2>
         <p>Aside from startups and writing code, my passion has always been consulting. I like meeting people and hearing about their new business ideas. If you are reading this webpage, please feel free to shoot me an email. I would enjoy speaking with you and I have no problem giving out free technical or business advice. I'm not saying that my advice would be as valuable as ten bars of gold, but it doesn't hurt to get another person's opinion.</p>
         <h2 class="text-center">A Most Modest Venture</h2>
